--- a/public/rastrearpedido.html
+++ b/public/rastrearpedido.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -305,7 +305,7 @@
     const map = L.map('map', {
       zoomControl: true,
       attributionControl: true
-    }).setView([coordenadasDestino.lat, coordenadasDestino.lon], 15);
+    }).setView([coordenadasDestino.lat, coordenadasDestino.lon], 17);
     
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
